refactor: update signin signup workflow
